hphp/hack/test/typecheck/expression_trees_not_virtualize_functions/instance_method_error.php.exp
File "instance_method_error.php", line 7, characters 12-22:
Expression trees do not support calling instance methods (Parsing[1002])
File "instance_method_error.php", line 7, characters 12-13:
Variable `$x` is undefined, or not always defined. (Naming[2050])
File "instance_method_error.php", line 7, characters 21-21:
Invalid argument (Typing[4110])
  File "instance_method_error.php", line 12, characters 23-32:
  Expected `ExampleInt`
  File "instance_method_error.php", line 7, characters 21-21:
  But got `int`
