hphp/hack/test/typecheck/expression_trees_not_virtualize_functions/instance_method_error.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

function test(): void {
  ExampleDsl`(?MyState $x) ==> {
    return $x?->foo(1);
  }`;
}

abstract class MyState {
  public function foo(ExampleInt $x): void {}
}
